Make sure only the whitespace is hidden

--- a/style.css
+++ b/style.css
@@ -606,7 +606,7 @@ Author URI: https://www.clickconsultingservices.com
 		display: none;
 	}
 
-	.program-more-details-open {
+	.program-categories .program-more-details-open {
 		font-size: 0;
 	}
 
